hphp/hack/test/typecheck/modules/module_attr_bad.php.exp
File "module_attr_bad.php", line 4, characters 8-23:
Cannot use unstable feature: `modules` (Parsing[1002])
